# autometrics-py

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  Tiltfile  docker-compose.yaml  prometheus.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/actions/: action.yml  get-release-version.js
.github/actions/get-release-version/: action.yml  get-release-version.js
.github/workflows/: build.yml  main.yml  release.yml
configs/: otel-collector-config.yaml
configs/compose/: examples.yaml  infra.yaml
configs/docker/: base.Dockerfile
configs/grafana/: config.ini
configs/grafana/dashboards/: Autometrics Function Explorer.json  Autometrics Overview.json  Autometrics Service Level Objectives (SLOs).json
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/grafana/provisioning/datasources/: datasource.yml
examples/: README.md  caller-example.py  docs-example.py  example.py  fastapi-example.py  init.py  starlette-otel-exemplars.py
examples/django_example/: Readme.md  locustfile.py  manage.py  mypy.ini  run_example.sh
examples/django_example/django_example/: asgi.py  settings.py  urls.py  wsgi.py
examples/django_example/django_example/views/: concurrency.py  error.py  latency.py  metrics.py  simple.py
examples/export_metrics/: otel-prometheus.py  otlp-grpc.py  otlp-http.py  otlp.py  prometheus-client.py
examples/fastapi/: main.py
examples/fastapi-with-fly-io/: Dockerfile  README.md  app.py  fly.toml
examples/otlp/: start.py
src/: autometrics.py  prometheus_url.py  test_prometheus_url.py
src/autometrics/: __init__.py  autometrics.py  config.py  conftest.py  constants.py  decorator.py  emit.py  exemplar.py  exposition.py  init.py  initialization.py  objectives.py  prometheus_url.py  settings.py  test_caller.py  test_decorator.py  test_initialization.py  test_objectives.py  test_prometheus_url.py  test_utils.py  utils.py
src/autometrics/admin_panel/: __init__.py  function_registry.py  memo.py  server.py
src/autometrics/emit/: __init__.py  emit.py  opentelemetry.py  prometheus.py  test_emit.py
src/autometrics/tracker/: __init__.py  opentelemetry.py  prometheus.py  temporary.py  test_concurrency.py  test_format.py  test_tracker.py  tracker.py  types.py
