[tool.poetry]
name = "autometrics"
version = "0.6"
description = "Easily add metrics to your system – and actually understand them using automatically customized Prometheus queries"
authors = ["Fiberplane <info@fiberplane.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/autometrics-dev/autometrics-py"
homepage = "https://github.com/autometrics-dev/autometrics-py"
keywords = ["metrics", "telemetry", "prometheus", "monitoring", "observability", "instrumentation"]
# classifiers = [
#     "Topic :: Software Development :: Build Tools",
#     "Topic :: Software Development :: Libraries :: Python Modules"
# ]
packages = [{include = "autometrics", from = "src"}]

[tool.poetry.dependencies]
opentelemetry-api = "^1.17.0"
opentelemetry-exporter-prometheus = "^1.12.0rc1"
opentelemetry-sdk = "^1.17.0"
prometheus-client = "0.16.0"
python = "^3.7"
python-dotenv = "0.21.1"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.307"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
anyio = "3.6.2"
bleach = "6.0.0"
build = "0.10.0"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
django = "^3.2"
docutils = "0.19"
fastapi = "0.97.0"
h11 = "0.14.0"
idna = "3.4"
# pinned importlib-metadat to version ~6.0.0 because of opentelemetry-api
importlib-metadata = "~6.0.0"
jaraco-classes = "3.2.3"
keyring = "23.13.1"
markdown-it-py = "2.2.0"
mdurl = "0.1.2"
more-itertools = "9.1.0"
packaging = "23.0"
pkginfo = "1.9.6"
pydantic = "1.10.6"
pygments = "2.14.0"
pyproject-hooks = "1.0.0"
readme-renderer = "37.3"
requests = "2.31.0"
requests-toolbelt = "0.10.1"
rfc3986 = "2.0.0"
rich = "13.3.2"
six = "1.16.0"
sniffio = "1.3.0"
starlette = ">=0.27.0,<0.28.0"
twine = "4.0.2"
urllib3 = "1.26.15"
uvicorn = "0.21.1"
webencodings = "0.5.1"
zipp = "3.15.0"
locust = "^2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
